<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFiList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
        <string name="toastFailed">Failed!</string>
    <string name="buttonOp">More&#8230;</string>
    
    <!-- Button label to connect to a wifi network-->
    <string name="connect">Connect</string>
    <!--  !!!!!!!! vpn_connect_toTitle of VPN connect dialog -->
    <string name="wifi_connect_to">Connect to %s</string>
    <!-- Wi-Fi IP address label -->    
    <string name="ip_address">IP address</string>
    <!-- Label for the signal strength -->
    <string name="signal">Signal strength</string>
    
     <!-- Button caption to forget a wifi network -->
    <string name="forget_network">Forget</string>
    <!-- Label for status of connection -->
    <string name="wifi_status">Status</string>
    <!--Wi-Fi settings screen, summary text for network when connected -->
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting&#8230;</string>
    <!-- Label for link speed (wifi) -->
    <string name="wifi_link_speed">Speed</string>
    <!-- Verbose wifi signal strength.  This is the best out of 4 levels. -->
    <string name="wifi_signal_3">Excellent</string>
    <!-- Verbose wifi signal strength.  This is the 2nd best out of 4 levels. -->
    <string name="wifi_signal_2">Good</string>
    <!-- Verbose wifi signal strength.  This is the 3rd best out of 4 levels. -->
    <string name="wifi_signal_1">Fair</string>
    <!-- Verbose wifi signal strength.  This is the worst out of 4 levels. -->
    <string name="wifi_signal_0">Poor</string>
    <!-- Label for the security of a wifi network -->
    <string name="security">Security</string>
    <!-- Value for the wifi security.  This means no encryption. -->
    <string name="wifi_security_open">Open</string>
    <!-- Value for the wifi security -->
    <string name="wifi_security_wep">WEP</string>
    <!-- Value for the wifi security -->
    <string name="wifi_security_wpa">WPA</string>
    <!-- Value for the wifi security -->
    <string name="wifi_security_wpa2">WPA2</string>
    <!-- Value for the wifi security -->
    <string name="wifi_security_wpa_eap">WPA-EAP</string>
    <!-- Value for the wifi security -->
    <string name="wifi_security_ieee8021x">IEEE8021X</string>

    
    <string name="please_type_passphrase">Wireless password</string>
    <string name="wifi_show_password">Show password.</string>
    
    <string name="wifi_change_password">Change password</string>
    <string name="button_change_password">Modify</string>
    <!-- An edit field's grayed out value when it has not been modified -->
    <string name="wifi_password_unchanged">(unchanged)</string>
    <!-- Button caption to save a configuration wifi -->
    <string name="wifi_save_config">Save</string>
    
    <string name="adhoc_not_supported_yet">AdHoc is not supported by Android platform yet!</string>
    
    <string name="dummy_content_description">""</string>

</resources>
